--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>project 1</title>
+  <title>Amazon Clone</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -71,7 +71,7 @@
         <i class="fa-solid fa-bars"></i>
         All
       </div>
-      <div class="panal-ops">
+      <div class="panal-ops border">
         <p> Today's Deals</p>
         <p> Registry</p>
         <p> Customer Service</p>
@@ -261,6 +261,7 @@
                   of songs
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Amazon Ads</p>
@@ -269,6 +270,7 @@
                   spend their time
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>6pm</p>
@@ -277,6 +279,7 @@
                   brands
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>AbeBooks</p>
@@ -284,6 +287,7 @@
                   & collectibles
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>ACX</p>
@@ -291,6 +295,7 @@
                   Made Easy
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Sell on Amazon </p>
@@ -298,6 +303,7 @@
                   Account
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Amazon Business</p>
@@ -308,6 +314,9 @@
                 </a>
               </td>
             </tr>
+            <tr>
+              <td> &nbsp;</td>
+            </tr>
             <tr class="table-row">
               <td>
                 <a href="#">
@@ -316,6 +325,7 @@
                   Internationally
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Home Services</p>
@@ -324,6 +334,7 @@
                   Guarantee
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Amazon Web<br> Services</p>
@@ -331,14 +342,15 @@
                   Computing <br>Services
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Audible</p>
-                  Audible<br>
                   Listen to Books<br> & Original<br>
                   Audio <br>Performances
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Box Office Mojo</p>
@@ -346,6 +358,7 @@
                   Box Office Data
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Goodreads </p>
@@ -353,6 +366,7 @@
                   &<br> recommendations
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>IMDb</p>
@@ -360,6 +374,9 @@
                   & Celebrities
                 </a>
               </td>
+            </tr>
+            <tr>
+              <td> &nbsp;</td>
             </tr>
             <tr class="table-row">
               <td>
@@ -369,6 +386,7 @@
                   Professionals<br> Need
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Kindle Direct <br>Publishing</p>
@@ -376,13 +394,15 @@
                   Made Easy
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
-                  <p> Prime Video <br>Direct<br> Services</p>
+                  <p> Prime Video <br>Direct<br></p>
                   Video<br> Distribution<br>
                   Made Easy
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Shopbop</p>
@@ -391,6 +411,7 @@
                   Fashion Brands
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Woot!</p>
@@ -398,6 +419,7 @@
                   Shenanigans
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Zappos </p>
@@ -405,6 +427,7 @@
                   Clothing
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p> Ring</p>
@@ -413,7 +436,12 @@
                 </a>
               </td>
             </tr>
-            <tr class="table-row last-row">
+            <tr>
+              <td> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td> &nbsp;</td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>eero WiFi</p>
@@ -421,6 +449,7 @@
                   in Every Room
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Blink</p>
@@ -428,6 +457,7 @@
                   for<br> Every Home
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p> Neighbors App</p>
@@ -435,6 +465,7 @@
                   & Safety Alerts
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p>Amazon Subscription <br> Boxes</p>
@@ -442,12 +473,15 @@
                   – right to your door
                 </a>
               </td>
+              <td style="width: 3%"></td>
               <td>
                 <a href="#">
                   <p> PillPack</p>
                   Pharmacy <br>Simplified
                 </a>
               </td>
+              <td style="width: 3%"></td>
+              <td> &nbsp;</td>
             </tr>
           </tbody>
         </table>
@@ -466,4 +500,5 @@
 
   </footer>
 </body>
+
 </html>
