trying to make it responsive

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
       </div>
       <!-- box2 -->
-      <div class="nav-address">
-        <p class="add-first"> Deliver to</p>
+      <div class="nav-address border">
+        <p class="add-first">Deliver to</p>
         <div class="add-icon">
           <i class="fa-solid fa-location-dot"></i>
-          <p class="add-sec">india</p>
+          <p class="add-sec">India</p>
         </div>
       </div>
       <!-- box3 -->
@@ -174,6 +174,8 @@
       </div>
     </div>
   </main>
+
+  <!-- ////////////////////// -->
   <div class="last-containoer">
     <div class="containoer-border">
       <p class="containoer-border-p1"> See personalized recommendations</p>
@@ -181,11 +183,11 @@
       <p class="containoer-border-p2"> New customer? <a href="#">Start here.</a></p>
     </div>
   </div>
-
+  <!-- button of back to top -->
+  <div class="back-to-top"> Back to top</div>
+  <!-- //////////////// -->
   <footer>
     <div class="footer-nav">
-      <!-- button of back to top -->
-      <div class="back-to-top"> Back to top</div>
       <!--footer part 1 -->
       <div class="footer-part1">
         <div class="footer-info">
@@ -197,6 +199,7 @@
           <a href="#">Amazon Devices</a>
           <a href="#">Amazon Science</a>
         </div>
+        <div style="width: 5%;"></div>
         <div class="footer-info">
           <p> Make Money with Us</p>
           <a href="#">Sell products on Amazon</a>
@@ -208,6 +211,7 @@
           <a href="#">Host an Amazon Hub</a>
           <a href="#">› See More Make Money <br>with Us</a>
         </div>
+        <div style="width: 5%;"></div>
         <div class="footer-info">
           <p> Amazon Payment Products</p>
           <a href="#">Amazon Business Card</a>
@@ -215,6 +219,7 @@
           <a href="#">Reload Your Balance</a>
           <a href="#"> Currency Converter</a>
         </div>
+        <div style="width: 5%;"></div>
         <div class="footer-info">
           <p> Let Us Help You</p>
           <a href="#">Amazon and COVID-19</a>
