--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <!-- box2 -->
-      <div class="nav-address border">
+      <div class="nav-address">
         <p class="add-first">Deliver to</p>
         <div class="add-icon">
           <i class="fa-solid fa-location-dot"></i>
