--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <!-- nav-bar -->
   <header>
-    <div class="nevbar">
+    <div class="nevbar border">
       <!-- box1 -->
-      <div class="nav-logo border">
+      <div class="nav-logo">
         <div class="logo">
         </div>
       </div>
@@ -78,7 +78,7 @@
         <p> Gift Cards</p>
         <p>Sell</p>
       </div>
-
+ 
     </div>
   </header>
 
