--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p> Gift Cards</p>
         <p>Sell</p>
       </div>
- 
+
     </div>
   </header>
 
@@ -266,7 +266,7 @@
                   of songs
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Amazon Ads</p>
@@ -275,7 +275,7 @@
                   spend their time
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>6pm</p>
@@ -284,7 +284,7 @@
                   brands
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>AbeBooks</p>
@@ -292,7 +292,7 @@
                   & collectibles
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>ACX</p>
@@ -300,7 +300,7 @@
                   Made Easy
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Sell on Amazon </p>
@@ -308,7 +308,7 @@
                   Account
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Amazon Business</p>
@@ -330,7 +330,7 @@
                   Internationally
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Home Services</p>
@@ -339,7 +339,7 @@
                   Guarantee
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Amazon Web<br> Services</p>
@@ -347,7 +347,7 @@
                   Computing <br>Services
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Audible</p>
@@ -355,7 +355,7 @@
                   Audio <br>Performances
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Box Office Mojo</p>
@@ -363,7 +363,7 @@
                   Box Office Data
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Goodreads </p>
@@ -371,7 +371,7 @@
                   &<br> recommendations
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>IMDb</p>
@@ -391,7 +391,7 @@
                   Professionals<br> Need
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Kindle Direct <br>Publishing</p>
@@ -399,7 +399,7 @@
                   Made Easy
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p> Prime Video <br>Direct<br></p>
@@ -407,7 +407,7 @@
                   Made Easy
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Shopbop</p>
@@ -416,7 +416,7 @@
                   Fashion Brands
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Woot!</p>
@@ -424,7 +424,7 @@
                   Shenanigans
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Zappos </p>
@@ -432,7 +432,7 @@
                   Clothing
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p> Ring</p>
@@ -446,7 +446,7 @@
             </tr>
             <tr class="table-row">
               <td> &nbsp;</td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>eero WiFi</p>
@@ -454,7 +454,7 @@
                   in Every Room
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Blink</p>
@@ -462,7 +462,7 @@
                   for<br> Every Home
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p> Neighbors App</p>
@@ -470,7 +470,7 @@
                   & Safety Alerts
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p>Amazon Subscription <br> Boxes</p>
@@ -478,18 +478,19 @@
                   – right to your door
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td>
                 <a href="#">
                   <p> PillPack</p>
                   Pharmacy <br>Simplified
                 </a>
               </td>
-              <td style="width: 3%"></td>
+              <!-- <td style="width: 3%"></td> -->
               <td> &nbsp;</td>
             </tr>
           </tbody>
         </table>
+        <!-- bottom-copy-right  -->
         <div class="botom">
           <div>
             <a href="#">Conditions of Use</a>
