adding media qure

--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
         <span class="Cart">Cart</span>
       </div>
     </div>
+    <!-- nav-bar-2 -->
     <div class="panal">
-      <div class="panal-all">
-        <i class="fa-solid fa-bars"></i>
-        All
+      <div class="border">
+        <div class="panal-all">
+          <i class="fa-solid fa-bars"></i>
+          All
+        </div>
       </div>
       <div class="panal-ops border">
         <p> Today's Deals</p>
@@ -490,7 +493,7 @@
                 <!-- <td style="width: 3%"></td> -->
                 <td> &nbsp;</td>
               </tr>
-            </tbody> 
+            </tbody>
           </table>
           <!-- bottom-copy-right  -->
           <div class="botom">
