--- a/index.html
+++ b/index.html
@@ -96,12 +96,6 @@
         <i class="fa-solid fa-chevron-right"></i>
       </span>
     </div>
-    <div class="hero-message">
-      <p class="massage">
-        You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.
-        <a href="#">click here to go to amazon.in </a>
-      </p>
-    </div>
   </div>
 
   <!-- contant area -->
@@ -204,7 +198,7 @@
             <a href="#">Amazon Devices</a>
             <a href="#">Amazon Science</a>
           </div>
-          <div style="width: 5%;"></div>
+          <div style="width: 5vw;"></div>
           <div class="footer-info">
             <p> Make Money with Us</p>
             <a href="#">Sell products on Amazon</a>
@@ -216,7 +210,7 @@
             <a href="#">Host an Amazon Hub</a>
             <a href="#">› See More Make Money <br>with Us</a>
           </div>
-          <div style="width: 5%;"></div>
+          <div style="width: 5vw;"></div>
           <div class="footer-info">
             <p> Amazon Payment Products</p>
             <a href="#">Amazon Business Card</a>
@@ -224,7 +218,7 @@
             <a href="#">Reload Your Balance</a>
             <a href="#"> Currency Converter</a>
           </div>
-          <div style="width: 5%;"></div>
+          <div style="width: 5vw;"></div>
           <div class="footer-info">
             <p> Let Us Help You</p>
             <a href="#">Amazon and COVID-19</a>
@@ -242,14 +236,18 @@
           <div class="footer-logo"></div>
           <div>
             <button class="button-english common-in-extra">
-              <i class="fa-solid fa-globe"></i>
-              English
+              <p>
+                <i class="fa-solid fa-globe"></i>
+                English
+              </p>
             </button>
           </div>
           <div>
             <button class="button-doller common-in-extra">
-              <i class="fa-solid fa-dollar-sign"></i>
-              USD-U.S. Dollar
+              <p>
+                <i class="fa-solid fa-dollar-sign"></i>
+                USD-U.S. Dollar
+              </p>
             </button>
           </div>
           <div>
