--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <header>
     <div class="nevbar border">
       <!-- box1 -->
-      <div class="nav-logo">
-        <div class="logo">
-        </div>
+      <div class="nav-logo logo">
       </div>
       <!-- box2 -->
       <div class="nav-address">
@@ -67,21 +65,13 @@
       </div>
     </div>
     <!-- nav-bar-2 -->
-    <div class="panal">
-      <div class="border">
-        <div class="panal-all">
-          <i class="fa-solid fa-bars"></i>
-          All
-        </div>
-      </div>
-      <div class="panal-ops border">
-        <p> Today's Deals</p>
-        <p> Registry</p>
-        <p> Customer Service</p>
-        <p> Gift Cards</p>
-        <p>Sell</p>
-      </div>
-
+    <div class="panal-ops border">
+      <p><i class="fa-solid fa-bars panal-all"> All</i></p>
+      <p> Today's Deals</p>
+      <p> Registry</p>
+      <p> Customer Service</p>
+      <p> Gift Cards</p>
+      <p>Sell</p>
     </div>
   </header>
 
